<resources>
    <string name="app_name">Weather application</string>
    <string name="Weather">Weather</string>
    <string name="choice_city">Choice city:</string>
    <string name="Moscow">Moscow</string>
    <string name="SaintPetersburg">Saint Petersburg</string>
    <string name="Cheboksary">Cheboksary</string>
    <string name="Kazan">Kazan</string>
    <string name="inter_the_city">Inter the city</string>
    <string name="pressure">Pressure</string>
    <string name="wind_speed">Wind speed</string>
    <string name="setting">Setting</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="humidity">Humidity</string>
    <string name="todo">TODO</string>
    <string name="Close">Close</string>
    <string name="city">City</string>
    <string name="enter">Enter</string>
    <string name="about_city">About city</string>
    <string name="about_the_city">about The City</string>
    <string name="new_york">New York</string>
    <string name="oslo">Oslo </string>
</resources>