<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/choice_city"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/textMoscow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Moscow"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textSaintPetersburg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SaintPetersburg"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textCheboksary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Cheboksary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textKazan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Kazan"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <CheckBox
            android:id="@+id/checkBoxPressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pressure" />

        <CheckBox
            android:id="@+id/checkBoWindSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonInterTheCity"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"

        android:layout_marginTop="8dp"
        android:text="@string/enter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/interTheCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:hint="@string/inter_the_city"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/Cheboksary"
        android:textColorHint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="@+id/buttonInterTheCity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.644"
        app:layout_constraintStart_toEndOf="@+id/buttonInterTheCity"
        app:layout_constraintTop_toTopOf="@+id/buttonInterTheCity"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textViewInteTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"

        android:layout_marginTop="8dp"
        android:text="Inter erature: "
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/buttonInterTheCity"
        app:layout_constraintTop_toBottomOf="@+id/buttonInterTheCity" />

    <TextView
        android:id="@+id/editTextTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5"
        app:layout_constraintBottom_toBottomOf="@+id/textViewInteTemperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewInteTemperature"
        app:layout_constraintTop_toTopOf="@+id/textViewInteTemperature" />

    <Button
        android:id="@+id/increaseTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Temp++"
        app:layout_constraintStart_toStartOf="@+id/textViewInteTemperature"
        app:layout_constraintTop_toBottomOf="@+id/textViewInteTemperature" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>